--- a/clusterdock/constants.cfg
+++ b/clusterdock/constants.cfg
@@ -16,7 +16,7 @@
 
 # Values stored in the DEFAULT section can be used for interpolation in any other section.
 [DEFAULT]
-docker_registry_url = docker.io
+docker_registry_url = registry-1.docker.io
 apache_namespace = apache
 cloudera_namespace = cloudera
 
