Add support for --java argument to CDH topology
This commit introduces an optional `volumes_from` argument to `Node`, which is then used by the
CDH topology to support selection of which Java version to use for a cluster deployment at runtime.
For this functionality to work, a Docker image tagged with the same repository name as the CDH
node images must be built using the Dockerfile in the topology's `jdk` folder. This image's
tag must be the directory name of the Dockerfile's `JDK_DIRECTORY` build arg with `cdh_` prepended
(e.g. `cdh_jdk1.8.0_121`).

--- a/clusterdock/topologies/cdh/profile.cfg
+++ b/clusterdock/topologies/cdh/profile.cfg
@@ -42,3 +42,7 @@ arg.exclude-service-types.metavar = svc1,svc2,...
 arg.include-service-types
 arg.include-service-types.help = If specified, a comma-separated list of service types to include in the CDH cluster
 arg.include-service-types.metavar = svc1,svc2,...
+
+arg.java
+arg.java.help = If specified, a Java version to use in place of the default value present on the cluster
+arg.java.metavar = version
