Update nodebase topology
* Add workaround for CentOS 6.6 issue with yum
* Add support for --node-disks
* Cleanup actions.py

--- a/clusterdock/images/centos6.6_nodebase/Dockerfile
+++ b/clusterdock/images/centos6.6_nodebase/Dockerfile
@@ -15,6 +15,9 @@
 # limitations under the License.
 FROM centos:6.6
 
+# Workaround for https://github.com/CentOS/sig-cloud-instance-images/issues/15.
+RUN yum install -y yum-plugin-ovl
+
 # Install useful things that are missing from the centos:6.6 image.
 RUN yum install -y openssh-clients \
     openssh-server \
