--- a/clusterdock/topologies/nodebase/profile.cfg
+++ b/clusterdock/topologies/nodebase/profile.cfg
@@ -21,3 +21,8 @@ description = A basic cluster with n nodes
 [node_groups]
 # Define node groups and specify which nodes of each to start during the build process.
 nodes = node-{1,2}
+
+[start]
+arg.node-disks
+arg.node-disks.help = Map of node names to block devices
+arg.node-disks.metavar = node-map
