--- a/clusterdock/topologies/cdh/profile.cfg
+++ b/clusterdock/topologies/cdh/profile.cfg
@@ -46,3 +46,10 @@ arg.include-service-types.metavar = svc1,svc2,...
 arg.java
 arg.java.help = If specified, a Java version to use in place of the default value present on the cluster
 arg.java.metavar = version
+
+arg.kerberos = False
+arg.kerberos.help = If specified, enable Kerberos for the cluster
+
+arg.kerberos-principals
+arg.kerberos-principals.help = If specified, a comma-separated list of Kerberos principals to be created
+arg.kerberos-principals.metavar = sdc,svc/host,...
