Change how Cluster is initialized
* Instead of passing NodeGroups around, *nodes with a new group attribute
  are taken by the initializer. This significantly cleans up topologies.

--- a/clusterdock/defaults.yaml
+++ b/clusterdock/defaults.yaml
@@ -13,5 +13,5 @@
 DEFAULT_NAMESPACE: clusterdock
 DEFAULT_NETWORK: cluster
 DEFAULT_OPERATING_SYSTEM: centos6.6
-DEFAULT_REGISTRY:
+DEFAULT_REGISTRY: docker.io
 DEFAULT_TOPOLOGY_DEFINITION_FILENAME: topology.yaml
