--- a/clusterdock/defaults.yaml
+++ b/clusterdock/defaults.yaml
@@ -10,6 +10,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+DEFAULT_DOCKER_LABEL_KEY: com.clusterdock.clusterdock
 DEFAULT_NETWORK: cluster
 DEFAULT_REGISTRY: docker.io
 DEFAULT_REPOSITORY: docker.io/clusterdock
